# disRNN-MP

./: .gitignore  AGENTS.md  LICENSE  README.md  README_draft.md  juliapkg.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
data/: GRU_RNNtraining.cloudpickle  disRNN_RNNtraining.cloudpickle  mp_beh_m18_500completed.npy
disRNN_MP/: dataset.py  metrics.py  typing.py  utils.py
disRNN_MP/agent/: MP_julia.py  MP_numba.py  __init__.py  abstract.py  agents.py  interact.py  matching_pennies.jl  patched_agent.py
disRNN_MP/analysis/: __init__.py  _model_graph_plots.py  bandit_dataset_analysis.py  disrnn_analyzer.py  disrnn_static_analy.py  meta.py  model_graph.py  tidy_db.py  two_arm_bandit_analyzer.py
disRNN_MP/classic_RL/: __init__.py  classic_RL.py  forgetQ_hetero.py
disRNN_MP/cli/: train_ModelTrainee.py  train_ModelTrainee.yaml
disRNN_MP/config/: MP_disRNN.yaml
disRNN_MP/experimental/: deep_disRNN.py  deep_disRNN2.py
disRNN_MP/rnn/: 2d_arrow_annotation.js  3d_dynamic_callback.js  __init__.py  disrnn.py  disrnn2.py  disrnn3.py  disrnn4.py  disrnn5.py  disrnn_analy.py  disrnn_def.py  hydra_cli.py  kl.py  network_defs.py  old_disrnn4.py  pkl_instantiate.py  plots.py  stop_crit.py  train.py  train_db.py  train_utils.py  (+2 more)
docs/: How-tos.md  NAVIGATION.md  api.md  datasets.md  index.md  lagged_bandit_task.md
tests/: test_BerLL.py  test_EnvironmentBanditsMP_julia.py  test_MP_numba.py  test_ModelTrainee_flexible_stop_criteria.py  test_ModelTrainer.py  test_RNNtraining.py  test_agents.py  test_classicRL.py  test_disrnn.py  test_disrnn_analy.py  test_forgetQ_perSession.py  test_matching_pennies.jl  test_rnn_utils.py  test_square_hier_clust.py  test_training_plots.py  test_typing.py
usage_example/: training_ModelTrainee.ipynb
(+23 files in other folders)
