[metadata]
name = disRNN_MP 
version = 0.1.0
author = Peiyu Liu

description = disRNN_MP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    dm-haiku 
    numpy 
    matplotlib
    scipy 
python_requires = >=3.7
include_package_data = False

